# Claw

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: file_ops.cpp  file_ops.hpp  main.cpp  ui.cpp  ui.hpp  utils.hpp
src/app/: app.cpp  app.hpp  filepane.cpp  filepane.hpp
src/core/: file_ops.cpp  file_ops.hpp
src/ui/: ui.cpp  ui.hpp
src/utils/: utils.cpp  utils.hpp
